# scangearmp

./: .gitignore  LICENSE-scangearmp-1.60EN.txt  LICENSE-scangearmp-1.60FR.txt  LICENSE-scangearmp-1.60JP.txt  LICENSE-scangearmp-1.60SC.txt  README.md  mp495_build.sh  scangearmp-common.spec
356/: cnc173ad.tbl  cnc_3560.tbl
369/: cnc1747d.tbl
370/: cnc1746d.tbl
373/: cnc1748d.tbl  cnc_3730.tbl
374/: cnc1749d.tbl
376/: cnc174ad.tbl
377/: cnc174bd.tbl
debian/: changelog  control  copyright  postrm  rules  scangearmp-mg5100series.postrm  scangearmp-mg5200series.postrm  scangearmp-mg6100series.postrm  scangearmp-mg8100series.docs  scangearmp-mg8100series.postrm  scangearmp-mp250series.postrm  (+2 more)
scangearmp/: ChangeLog  INSTALL  NEWS  configure.in  scangearmp.glade
scangearmp/backend/: Makefile.am  canon_mfp.c  canon_mfp.conf  canon_mfp.h  canon_mfp_debug.h  canon_mfp_opts.h  canon_mfp_tools.c  canon_mfp_tools.h
scangearmp/backend/include/: cnmslld.h
scangearmp/etc/: 80-canon_mfp.rules
scangearmp/include/: cnmsability.h  cnmsdef.h  cnmsimg.h  cnmstype.h  cnmsui.h  scanopts.h
scangearmp/po/: cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  ru.po  scangearmp.pot  sv.po  th.po  tr.po  zh.po  zh_TW.po
scangearmp/src/: Makefile.am  callbacks.c  callbacks.h  child_dialog.c  child_dialog.h  cnmsfunc.c  cnmsfunc.h  cnmsnetwork.c  cnmsnetwork.h  cnmsstr.c  cnmsstr.h  cnmsstrings.h  coloradjust.c  coloradjust.h  coloradjust_bc.c  coloradjust_bc.h  coloradjust_fr.c  coloradjust_fr.h  coloradjust_hg.c  coloradjust_hg.h  coloradjust_mc.c  coloradjust_mc.h  coloradjust_tc.c  coloradjust_tc.h  coloradjuststr.h  com_gtk.c  com_gtk.h  errors.h  file_control.c  file_control.h  interface.c  interface.h  keep_setting.c  keep_setting.h  main.c  preference.c  preference.h  prev_main.c  prev_main.h  prev_sub.c  (+23 more)
(+4 files in other folders)
